crates/frontend/tests/type_errors/type_mismatch.nemo
global x : i32 = 10.0
global my_fn : fn (i32) -> i32 = fn (x : f32) -> f32 { x }
